--- a/teenager-group.html
+++ b/teenager-group.html
@@ -140,7 +140,7 @@
                     <p>Уверенные шаги во взрослый мир</p>
                     <p>
                         <a meta-item="toFirst" class="button_green">Отправить заявку</a>
-                        <a href="#" class="button_green_full">Пройти тест</a>
+                        <a href="https://onlinetestpad.com/t/smartroverstest" class="button_green_full">Пройти тест</a>
                     </p>
                 </div>
                 <div class="course-name-img" data-aos="fade-right" data-aos-duration="1000">
@@ -248,7 +248,7 @@
         <div class="course-test" data-aos="zoom-out" >
             <h2 data-aos="fade-left" data-aos-duration="2000">Уже сейчас вы сами можете узнать уровень ребенка и понять, соответствуют ли его знания требованиям ФГОС
             </h2>
-            <p data-aos="fade-right" data-aos-duration="3000"><a class="button_red_full" href="#">Пройти тест</a></p>
+            <p data-aos="fade-right" data-aos-duration="3000"><a class="button_red_full" href="https://onlinetestpad.com/t/smartroverstest">Пройти тест</a></p>
         </div>
 
 
@@ -602,7 +602,7 @@
                     <img src="./assets/image/teenager-group/build/build2.svg" alt="">
                     <h4 class="red">Определение уровня</h4>
                     <p>Уже сейчас вы сами можете узнать уровень ребенка и понять, соответствуют ли его знания требованиям ФГОС</p>
-                    <p><a href="#" class="button_green">Пройти тест</a></p>
+                    <p><a href="https://onlinetestpad.com/t/smartroverstest" class="button_green">Пройти тест</a></p>
                 </div>
                 <div class="course-build-item" data-aos="fade-down" data-aos-offset="400" data-aos-duration="1000">
                     <img src="./assets/image/teenager-group/build/build3.svg" alt="">
