--- a/group-filial.html
+++ b/group-filial.html
@@ -259,17 +259,17 @@
         <div class="course-build group-filial" >
             <h2 class="orange" data-aos="flip-left" data-aos-offset="300">Как мы строим обучение:</h2>
             <div class="course-build_wrap">
-                <div class="course-build-item" data-aos="fade-down" data-aos-offset="250" data-aos-duration="500">
+                <div class="course-build-item" data-aos="fade-up" data-aos-offset="250" data-aos-duration="500">
                     <img src="./assets/image/group-filial/build/1.svg" alt="">
                     <h4 class="red">Мы много работаем в группе</h4>
                     <p>чтобы сформировать такие навыки общения, как аудирование, говорение, чтение и письмо.</p>
                 </div>
-                <div class="course-build-item" data-aos="fade-down" data-aos-offset="250" data-aos-duration="700">
+                <div class="course-build-item" data-aos="fade-up" data-aos-offset="250" data-aos-duration="700">
                     <img src="./assets/image/group-filial/build/2.svg" alt="">
                     <h4 class="red">У нас индивидуальный подход</h4>
                     <p>это значит, что мы следим за прогрессом каждого студента, а преподаватель всегда оставляет обратную связь по каждому уроку.</p>
                 </div>
-                <div class="course-build-item" data-aos="fade-down" data-aos-offset="250" data-aos-duration="500">
+                <div class="course-build-item" data-aos="fade-up" data-aos-offset="250" data-aos-duration="500">
                     <img src="./assets/image/group-filial/build/3.svg" alt="">
                     <h4 class="red">Это не просто курс, а настоящая игра!</h4>
                     <p>Работая в команде ты сможешь развить навыки общения, снять языковой барьер, и это все возможно в ситуациях реального общения – прямо на наших уроках!</p>
