--- a/teenager-group.html
+++ b/teenager-group.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="header-user_link desktop">Личный кабинет</div>
-                <div class="burger-button">
+                <div class="burger-button mobile">
                     <input type="checkbox" id="burger" name="burger">
                     <label for="burger"><span></span></label>
                 </div>
