--- a/error.html
+++ b/error.html
@@ -171,19 +171,21 @@
 
         <!-- Footer -->
         <footer>
-            <div><img src='./assets/image/logo.svg' /></div>
-            <div class="footer-copy">
-                © Смарт Эдьюкейшн, 2007-2020<br>
-                <a href="#">Политика Конфиденциальности</a>
-            </div>
-            <div class="footer-right">
-                <div class="footer-social">
-                    <a href="https://www.facebook.com/smartednn" target="_blank"><img src="./img/fb.svg" /></a>
-                    <a href="https://vk.com/smarteducation" target="_blank"><img src="./img/vk.svg" /></a>
-                    <a href="https://www.instagram.com/smart_education_school/" target="_blank"><img
-                            src="./img/ins.svg" /></a>
+            <div class="footer_wrap">
+                <div><img src='./assets/image/logo.svg' /></div>
+                <div class="footer-copy">
+                    © Смарт Эдьюкейшн, 2007-2020<br>
+                    <a href="#">Политика Конфиденциальности</a>
                 </div>
-                <div class="footer-work">Made in <a href="">Le Design</a></div>
+                <div class="footer-right">
+                    <div class="footer-social">
+                        <a href="https://www.facebook.com/smartednn" target="_blank"><img src="./img/fb.svg" /></a>
+                        <a href="https://vk.com/smarteducation" target="_blank"><img src="./img/vk.svg" /></a>
+                        <a href="https://www.instagram.com/smart_education_school/" target="_blank"><img
+                                src="./img/ins.svg" /></a>
+                    </div>
+                    <div class="footer-work">Made in <a href="">Le Design</a></div>
+                </div>
             </div>
         </footer>
 
