--- a/children-group.html
+++ b/children-group.html
@@ -366,7 +366,7 @@
                     <div class="tab-item-desc">
                         <div data-aos="fade-right" data-aos-offset="300">
                             <h2 class="red">SMART BEES</h2>
-                            <h2 class="orange">курс английского языка для дошкольников</h2>
+                            <h2 class="green">курс английского языка для дошкольников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 60 минут</div>
@@ -417,7 +417,7 @@
                     <div class="tab-item-desc">
                         <div data-aos="fade-right" data-aos-offset="300">
                             <h2 class="red">SMART EXPLORERS</h2>
-                            <h2 class="orange">курс английского для младших школьников</h2>
+                            <h2 class="green">курс английского для младших школьников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 80 минут</div>
@@ -474,7 +474,7 @@
                     <div class="tab-item-desc">
                         <div data-aos="fade-right" data-aos-offset="300">
                             <h2 class="red">SMART TRAVELLERS</h2>
-                            <h2 class="orange">курс английского для младших школьников</h2>
+                            <h2 class="green">курс английского для младших школьников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 100 минут</div>
@@ -532,7 +532,7 @@
                     <div class="tab-item-desc">
                         <div data-aos="fade-right" data-aos-offset="300">
                             <h2 class="red">SMART ROVERS</h2>
-                            <h2 class="orange">курс английского для младших школьников</h2>
+                            <h2 class="green">курс английского для младших школьников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 100 минут</div>
@@ -853,25 +853,27 @@
                 <a name='map'>На карте</a>
             </div>
             <div id="map" class="arderss-mobile"></div>
-            <div id="list" class="adress-desc arderss-mobile">
-                <h3>Адреса школ</h3>
+            <div class="adress_wrap">
+                <div id="list" class="adress-desc arderss-mobile">
+                    <h3>Адреса школ</h3>
 
-                <div class="adress-desc_item">
-                    <h4>Филиал Горьковский</h4>
-                    <div class="adress-desc_adres">
-                        Горьковская<br />
-                        ул. Горького 218/22
+                    <div class="adress-desc_item">
+                        <h4>Филиал Горьковский</h4>
+                        <div class="adress-desc_adres">
+                            Горьковская<br />
+                            ул. Горького 218/22
+                        </div>
+                        <div class="adress-desc_link"><a class="button_green" href="#">Подробнее</a></div>
                     </div>
-                    <div class="adress-desc_link"><a class="button_green" href="#">Подробнее</a></div>
-                </div>
 
-                <div class="adress-desc_item">
-                    <h4>Филиал Ленинский</h4>
-                    <div class="adress-desc_adres">
-                        Ленинская<br />
-                        пр. Ленина, 17
+                    <div class="adress-desc_item">
+                        <h4>Филиал Ленинский</h4>
+                        <div class="adress-desc_adres">
+                            Ленинская<br />
+                            пр. Ленина, 17
+                        </div>
+                        <div class="adress-desc_link"><a class="button_green" href="#">Подробнее</a></div>
                     </div>
-                    <div class="adress-desc_link"><a class="button_green" href="#">Подробнее</a></div>
                 </div>
             </div>
         </div>
