--- a/teenager-group.html
+++ b/teenager-group.html
@@ -546,7 +546,7 @@
         </div>
 
         <!-- How work -->
-        <div class="course-work" data-aos="fade-up" data-aos-offset="300">
+        <div class="course-work teenager" data-aos="fade-up" data-aos-offset="300">
             <div class="course-work_wrap">
                 <h2 class="green" data-aos="fade-left" data-aos-offset="300" data-aos-duration="1000">Кто работает с
                     вашими детьми?</h2>
