--- a/children-group.html
+++ b/children-group.html
@@ -352,7 +352,7 @@
         <!-- Course age child -->
         <div class="course-age">
             <div class="course-age_wrap">
-                <h2 class="orange" data-aos="fade-right" data-aos-offset="200">Выберите возраст вашего ребенка</h2>
+                <h2 class="orange">Выберите возраст вашего ребенка</h2>
                 <div class="mobile-age-tabs">
                     <div class="mobile-age-select mobile">4-6 лет</div>
                     <div class="course-age-tabs">
@@ -360,14 +360,15 @@
                         <a class="tabs_link" name="tab_item2">7-9 лет</a>
                         <a class="tabs_link" name="tab_item3">10-13 лет</a>
                         <a class="tabs_link" name="tab_item4">14-17 лет</a>
+                        
                     </div>
                 </div>
                 <div class="course-age-tab-item" id="tab_item1">
 
                     <div class="tab-item-desc">
                         <div>
-                            <h2 class="red" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">SMART BEES</h2>
-                            <h2 class="green" data-aos="fade-right" data-aos-duration="1500" data-aos-offset="200">курс английского языка для дошкольников</h2>
+                            <h2 class="red">SMART BEES</h2>
+                            <h2 class="green">курс английского языка для дошкольников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 60 минут</div>
@@ -383,26 +384,26 @@
                         </div>
                     </div>
                     <div class="tab-item-about">
-                        <h2 class="blue" data-aos="fade-right" data-aos-offset="200" >Что мы делаем на курсе:</h2>
+                        <h2 class="blue" >Что мы делаем на курсе:</h2>
                         <div class="tab-item-about-items">
-                            <div class="teach" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="teach">
                                 <p class="tab-item-about-item_name">УЧИМ ОБЩАТЬСЯ НА АНГЛИЙСКОМ</p>
                                 <p>Обучение строится на коммуникативной методике полного физического реагирования</p>
                                 <p>Total Physical Response: маленькие студенты усваивают информацию через все основные
                                     каналы восприятия: зрительный, слуховой, кинестетический.</p>
                             </div>
-                            <div class="promotion" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">
+                            <div class="promotion">
                                 <p class="tab-item-about-item_name">РАЗВИВАЕМ</p>
                                 <p>Развивающие компоненты курса совершенствуют образное мышление, воображение, моторику.
                                 </p>
                                 <p>Главное при работе с дошкольниками – это искренний интерес и мотивация! </p>
                             </div>
-                            <div class="know" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="know">
                                 <p class="tab-item-about-item_name">ДАЕМ НОВЫЕ ЗНАНИЯ</p>
                                 <p>Новая лексика и грамматические конструкции запоминаются так, как слова родного языка.
                                 </p>
                             </div>
-                            <div class="motivation" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500">
+                            <div class="motivation">
                                 <p class="tab-item-about-item_name">МОТИВИРУЕМ</p>
                                 <p>Игровой компонент превращает процесс обучения в увлекательное приключение и не дает
                                     ребятам заскучать: мы смотрим мультфильмы, рисуем, поем английские песенки и даже
@@ -417,8 +418,8 @@
 
                     <div class="tab-item-desc">
                         <div data-aos="fade-right">
-                            <h2 class="red" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">SMART EXPLORERS</h2>
-                            <h2 class="green" data-aos="fade-right" data-aos-duration="1500" data-aos-offset="200">курс английского для младших школьников</h2>
+                            <h2 class="red">SMART EXPLORERS</h2>
+                            <h2 class="green">курс английского для младших школьников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 80 минут</div>
@@ -434,27 +435,27 @@
                         </div>
                     </div>
                     <div class="tab-item-about">
-                        <h2 class="blue" data-aos="fade-right" data-aos-offset="200">Что мы делаем на курсе:</h2>
+                        <h2 class="blue">Что мы делаем на курсе:</h2>
                         <div class="tab-item-about-items">
-                            <div class="teach" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="teach">
                                 <p class="tab-item-about-item_name">УЧИМ ОБЩАТЬСЯ НА АНГЛИЙСКОМ</p>
                                 <p>Развитие навыков свободного общения, чтения, восприятия речи на слух, знакомство с
                                     новой
                                     лексикой происходит с применением коммуникативных игровых методик.</p>
                             </div>
-                            <div class="know" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">
+                            <div class="know">
                                 <p class="tab-item-about-item_name">ДАЕМ НОВЫЕ ЗНАНИЯ</p>
                                 <p>Ребята регулярно работают над произношением, повторяя слова и предложения за героями
                                     учебника. Преподаватели знакомят студентов с грамматической системой языка и
                                     закрепляют новую лексику.</p>
                             </div>
-                            <div class="promotion" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="promotion">
                                 <p class="tab-item-about-item_name">РАЗВИВАЕМ</p>
                                 <p>Новая лексика и грамматические конструкции запоминаются так, как слова родного языка.
                                 </p>
                             </div>
 
-                            <div class="motivation" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500">
+                            <div class="motivation">
                                 <p class="tab-item-about-item_name">МОТИВИРУЕМ</p>
                                 <p>Игровой компонент превращает процесс обучения в увлекательное приключение
                                     и не дает ребятам заскучать: мы смотрим мультфильмы, рисуем, поем английские песни
@@ -462,8 +463,7 @@
                                     даже танцуем.</p>
                             </div>
                         </div>
-                        <div class="tab-item-about_attantion blue" data-aos="fade-up" data-aos-offset="300"
-                            data-aos-duration="1000">На этом этапе ребята готовятся к Кембриджским
+                        <div class="tab-item-about_attantion blue">На этом этапе ребята готовятся к Кембриджским
                             экзаменам
                             <span class="red">YOUNG LEARNERS EXAMS.</span></div>
                     </div>
@@ -474,8 +474,8 @@
 
                     <div class="tab-item-desc">
                         <div >
-                            <h2 class="red" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">SMART TRAVELLERS</h2>
-                            <h2 class="green" data-aos="fade-right" data-aos-duration="1500" data-aos-offset="200">курс английского для младших школьников</h2>
+                            <h2 class="red">SMART TRAVELLERS</h2>
+                            <h2 class="green">курс английского для младших школьников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 100 минут</div>
@@ -491,28 +491,28 @@
                         </div>
                     </div>
                     <div class="tab-item-about">
-                        <h2 class="blue" data-aos="fade-right" data-aos-offset="200">Что мы делаем на курсе:</h2>
+                        <h2 class="blue">Что мы делаем на курсе:</h2>
                         <div class="tab-item-about-items">
-                            <div class="teach" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="teach">
                                 <p class="tab-item-about-item_name">УЧИМ ОБЩАТЬСЯ НА АНГЛИЙСКОМ</p>
                                 <p>Навыки разговорной речи развиваются на уроках в созданных преподавателем ситуациях
                                     реального общения: это методика Task-based Learning - обучение, построенное не на
                                     правилах, а на коммуникативных задачах.</p>
                             </div>
 
-                            <div class="know" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">
+                            <div class="know">
                                 <p class="tab-item-about-item_name">ДАЕМ НОВЫЕ ЗНАНИЯ</p>
                                 <p>Ребята регулярно работают над навыками аудирования, чтения и письма на уроке и дома в
                                     программе online. Преподаватели отрабатывают грамматику языка и закрепляют новую
                                     лексику.</p>
                             </div>
-                            <div class="promotion" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="promotion">
                                 <p class="tab-item-about-item_name">РАЗВИВАЕМ</p>
                                 <p>Ребята активно развивают свои soft skills (гибкие навыки), работая в группе, а
                                     дополнительные упражнения курса расширяют знания учеников в других сферах: наука,
                                     математика, география, история и др.</p>
                             </div>
-                            <div class="motivation" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">
+                            <div class="motivation">
                                 <p class="tab-item-about-item_name">МОТИВИРУЕМ</p>
                                 <p>Созданный в сотрудничестве с Discovery EducationTM, курс содержит увлекательные
                                     видеоролики, происходит обсуждение мировых новостей и важных тем, чтобы
@@ -520,7 +520,7 @@
                                     интерес и любопытство у учеников.</p>
                             </div>
                         </div>
-                        <div class="tab-item-about_attantion blue" data-aos="fade-op" data-aos-offset="300">На этом
+                        <div class="tab-item-about_attantion blue">На этом
                             этапе ребята готовятся к Кембриджским
                             экзаменам
                             <span class="red">PET и KET,</span> а так же <span class="red">ОГЭ.</span></div>
@@ -532,8 +532,8 @@
 
                     <div class="tab-item-desc">
                         <div >
-                            <h2 class="red" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">SMART ROVERS</h2>
-                            <h2 class="green" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">курс английского для младших школьников</h2>
+                            <h2 class="red">SMART ROVERS</h2>
+                            <h2 class="green">курс английского для младших школьников</h2>
                             <div class="tab-item-table">
                                 <div class="tab-item-table_calendar">2 раза в неделю</div>
                                 <div class="tab-item-table_time">длительность урока – 100 минут</div>
@@ -550,28 +550,28 @@
                         </div>
                     </div>
                     <div class="tab-item-about">
-                        <h2 class="blue" data-aos="fade-right" data-aos-offset="200">Что мы делаем на курсе:</h2>
+                        <h2 class="blue">Что мы делаем на курсе:</h2>
                         <div class="tab-item-about-items">
-                            <div class="teach" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="teach">
                                 <p class="tab-item-about-item_name">УЧИМ ОБЩАТЬСЯ НА АНГЛИЙСКОМ</p>
                                 <p>Навыки разговорной речи развиваются на уроках в созданных преподавателем ситуациях
                                     реального общения: это методика Task-based Learning - обучение, построенное не на
                                     правилах, а на коммуникативных задачах.</p>
                             </div>
-                            <div class="know" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">
+                            <div class="know">
                                 <p class="tab-item-about-item_name">ДАЕМ НОВЫЕ ЗНАНИЯ</p>
                                 <p>Ребята регулярно работают над навыками аудирования, чтения и письма на уроке и дома в
                                     программе online. Преподаватели отрабатывают грамматику языка и закрепляют новую
                                     лексику.</p>
                             </div>
-                            <div class="promotion" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">
+                            <div class="promotion">
                                 <p class="tab-item-about-item_name">РАЗВИВАЕМ</p>
                                 <p>Ребята активно развивают свои soft skills (гибкие навыки), работая в группе. Курс
                                     предлагает целостный подход к обучению: развитие мышления, побуждая школьников
                                     задуматься о ценностях и повышает самооценку при использовании нового языка.</p>
                             </div>
 
-                            <div class="motivation" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1500">
+                            <div class="motivation">
                                 <p class="tab-item-about-item_name">МОТИВИРУЕМ</p>
                                 <p>Одна из основных задач курса — создать правильную мотивацию, показать студентам, что
                                     английский нужен им каждый день: для учебы, общения со сверстниками и отдыха.
@@ -580,7 +580,7 @@
                                     возможность построить успешную карьеру в будущем.</p>
                             </div>
                         </div>
-                        <div class="tab-item-about_attantion blue" data-aos="fade-up" data-aos-offset="300">На этом
+                        <div class="tab-item-about_attantion blue">На этом
                             этапе ребята готовятся к Кембриджским
                             экзаменам
                             <span class="red">PET и KET,</span> а так же <span class="red">ОГЭ.</span></div>
