--- a/group-filial.html
+++ b/group-filial.html
@@ -205,13 +205,12 @@
         <div class="course-programm">
             <div class="course-programm_wrap">
                 <div data-aos="">
-                    <h2 class="orange" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200">
+                    <h2 class="orange" >
                         <span class="green">Программа от</span> мирового лидера обучения
                     </h2>
                     <p>Курс разработан — Cambridge
                         University Press — с учетом многолетнего опыта и новейших тенденций в образовании.</p>
-                    <p data-aos="fade-up" data-aos-duration="900" data-aos-offset="200"><a
-                            class="button_red_full">Записаться на курс</a></p>
+                    <p><a class="button_red_full">Записаться на курс</a></p>
                 </div>
                 <div class="course-programm-video" >
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/JR7V_uhqC3Y" frameborder="0"
@@ -361,12 +360,12 @@
         <!-- Course about school -->
         <div class="course-about_school group-filial">
             <div class="course-about_school_wrap">
-                <h2 data-aos="fade-right" data-aos-offset="250" data-aos-duration="1000">Школа Smart Education это:</h2>
+                <h2 data-aos="fade-right">Школа Smart Education это:</h2>
                 <div class="course-about_school-wrap">
-                    <p data-aos="fade-up" data-aos-duration="700" data-aos-offset="300"><span>99%</span>Положительных отзывов в интернете</p>
-                    <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300"><span>100%</span>Сертифицированных преподавателей</p>
-                    <p data-aos="fade-up" data-aos-duration="1300" data-aos-offset="300"><span>12 лет</span>Успешкой работы в образовании</p>
-                    <p data-aos="fade-up" data-aos-duration="1600" data-aos-offset="300"><span>6 лет</span>аккредитованный партнер
+                    <p><span>99%</span>Положительных отзывов в интернете</p>
+                    <p><span>100%</span>Сертифицированных преподавателей</p>
+                    <p><span>12 лет</span>Успешкой работы в образовании</p>
+                    <p><span>6 лет</span>аккредитованный партнер
                         издательства Кембридж</p>
                 </div>
             </div>
