--- a/children-group.html
+++ b/children-group.html
@@ -74,6 +74,9 @@
                     <li><a href="#">Корпоративное обучение</a></li>
                     <li>
                         <a href="#">Преподавателям английского языка</a>
+                        <ul class="menu-children">
+                            <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">О школе</a>
@@ -103,6 +106,9 @@
                         <li><a href="#">Корпоративное обучение</a></li>
                         <li>
                             <a href="#">Преподавателям английского языка</a>
+                            <ul class="menu-children">
+                                <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#">О школе</a>
