--- a/error.html
+++ b/error.html
@@ -52,9 +52,9 @@
             <nav class="desktop">
                 <ul>
                     <li>
-                        <a class="active" href="#">Для детей и подростков</a>
+                        <a href="#">Для детей и подростков</a>
                         <ul class="menu-children">
-                            <li><a href="#" class="active">Английский в филиалах школы 3-17 лет</a></li>
+                            <li><a href="#">Английский в филиалах школы 3-17 лет</a></li>
                             <li><a href="#">Английский онлайн, 13-17 лет</a></li>
                             <li><a href="#">Подготовка к международным экзаменам</a></li>
                         </ul>
@@ -71,6 +71,9 @@
                     <li><a href="#">Корпоративное обучение</a></li>
                     <li>
                         <a href="#">Преподавателям английского языка</a>
+                        <ul class="menu-children">
+                            <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">О школе</a>
@@ -81,9 +84,9 @@
                 <nav class="">
                     <ul>
                         <li>
-                            <a class="active" href="#">Для детей и подростков</a>
+                            <a href="#">Для детей и подростков</a>
                             <ul class="menu-children">
-                                <li><a href="#" class="active">Английский в филиалах школы 3-17 лет</a></li>
+                                <li><a href="#">Английский в филиалах школы 3-17 лет</a></li>
                                 <li><a href="#">Английский онлайн, 13-17 лет</a></li>
                                 <li><a href="#">Подготовка к международным экзаменам</a></li>
                             </ul>
@@ -100,6 +103,9 @@
                         <li><a href="#">Корпоративное обучение</a></li>
                         <li>
                             <a href="#">Преподавателям английского языка</a>
+                            <ul class="menu-children">
+                                <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#">О школе</a>
