--- a/teenager-group.html
+++ b/teenager-group.html
@@ -61,8 +61,8 @@
                     <li>
                         <a class="active" href="#">Для детей и подростков</a>
                         <ul class="menu-children">
-                            <li><a href="#" class="active">Английский в филиалах школы 3-17 лет</a></li>
-                            <li><a href="#">Английский онлайн, 13-17 лет</a></li>
+                            <li><a href="#">Английский в филиалах школы 3-17 лет</a></li>
+                            <li><a href="#" class="active">Английский онлайн, 13-17 лет</a></li>
                             <li><a href="#">Подготовка к международным экзаменам</a></li>
                         </ul>
                     </li>
@@ -78,6 +78,9 @@
                     <li><a href="#">Корпоративное обучение</a></li>
                     <li>
                         <a href="#">Преподавателям английского языка</a>
+                        <ul class="menu-children">
+                            <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">О школе</a>
@@ -90,8 +93,8 @@
                         <li>
                             <a class="active" href="#">Для детей и подростков</a>
                             <ul class="menu-children">
-                                <li><a href="#" class="active">Английский в филиалах школы 3-17 лет</a></li>
-                                <li><a href="#">Английский онлайн, 13-17 лет</a></li>
+                                <li><a href="#" >Английский в филиалах школы 3-17 лет</a></li>
+                                <li><a href="#" class="active">Английский онлайн, 13-17 лет</a></li>
                                 <li><a href="#">Подготовка к международным экзаменам</a></li>
                             </ul>
                         </li>
@@ -107,6 +110,9 @@
                         <li><a href="#">Корпоративное обучение</a></li>
                         <li>
                             <a href="#">Преподавателям английского языка</a>
+                            <ul class="menu-children">
+                                <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#">О школе</a>
