home, news, stocks, teacher, feedback

--- a/children-group.html
+++ b/children-group.html
@@ -68,19 +68,20 @@
                             <li><a href="#">Разговорный английский в филиалах школы</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#">Онлайн обучение</a>
-                    </li>
                     <li><a href="#">Корпоративное обучение</a></li>
                     <li>
-                        <a href="#">Преподавателям английского языка</a>
+                        <a href="#">О школе</a>
+                    </li>
+                    <li>
+                        <a href="#">Наши филиалы</a>
+                    </li>
+                    <li>
+                        <a href="#">Преподавателям</a>
                         <ul class="menu-children">
                             <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#">О школе</a>
-                    </li>
+                    
                 </ul>
             </nav>
             <div class="mobile burger-menu" id="burger-menu">
@@ -100,19 +101,20 @@
                                 <li><a href="#">Разговорный английский в филиалах школы</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#">Онлайн обучение</a>
-                        </li>
                         <li><a href="#">Корпоративное обучение</a></li>
                         <li>
-                            <a href="#">Преподавателям английского языка</a>
+                            <a href="#">О школе</a>
+                        </li>
+                        <li>
+                            <a href="#">Наши филиалы</a>
+                        </li>
+                        <li>
+                            <a href="#">Преподавателям</a>
                             <ul class="menu-children">
                                 <li><a href="#">Подготовка к международному экзамену ТКТ онлайн</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#">О школе</a>
-                        </li>
+                        
                     </ul>
                 </nav>
                 <div class="burger-bottom">
