inside teache, news, stocks, filial

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
         </div>
 
-        <!-- Course Advantages  -->
+        <!-- Slider Teacher  -->
         <div class="home-teacher">
             <div class="home-teacher-wrap">
                 <h2 class="green">Преподаватели</h2>
